--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ img {
   width: 35vw;
 }
 
+.nextclass {
+  color: gray;
+}
+
+.nextclass a {
+  color: gray;
+}
+
 h1 {
   font-size: 1em;
   font-weight: 100;
