--- a/style.css
+++ b/style.css
@@ -25,8 +25,20 @@ img {
 }
 
 pre {
-  color: red;
+  /* color: red; */
   font-size: .75em;
+  padding: .25em 2.4em 0.25em 2.6em;
+  font-family: serif;
+  white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
+  white-space: -pre-wrap; /* Opera */
+  white-space: -o-pre-wrap; /* Opera */
+  white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+  word-wrap: break-word; /* IE 5.5+ */
+}
+
+.codeblock {
+  color: red;
+  font-family: monospace;
 }
 
 code{
