--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ pre a:hover {
   font-family: monospace;
   padding: .25em 2.4em 0.25em 0em;
   margin-left: 3.25em;
+  margin-right: 4.25em;
   background-color: mistyrose;
 }
 
