--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ footer {
 
 /*   Responsive
 **********************************/
-@media only screen and (max-width: 1000px) {
+@media screen and (max-width: 812px) {
   body {
     font-size: 3.1em;
     margin: .5em 0em;
